force-app/main/default/objects/Credit_Rating__c/Credit_Rating__c.object-meta.xml
<CustomObject>
    <label>Credit Rating</label>
    <nameField>
        <label>Credit Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>