force-app/main/default/objects/Credit_Rating__c/fields/Absolute_amount_under_the_instrument_bei__c.field-meta.xml
<CustomField>
    <fullName>Absolute_amount_under_the_instrument_bei__c</fullName>
    <label>Absolute amount under the instrument bei</label>
    <length>255</length>
    <type>Text</type>
</CustomField>