force-app/main/default/objects/Credit_Rating__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Ratings</relationshipLabel>
    <relationshipName>Credit_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>