force-app/main/default/objects/Credit_Rating__c/fields/Date_of_Issuance_of_the_rating_on_the_in__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issuance_of_the_rating_on_the_in__c</fullName>
    <label>Date of Issuance of the rating on the in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>