force-app/main/default/objects/Credit_Rating__c/fields/Outlook_on_the_entity_as_assessed_by_the__c.field-meta.xml
<CustomField>
    <fullName>Outlook_on_the_entity_as_assessed_by_the__c</fullName>
    <label>Outlook on the entity as assessed by the</label>
    <length>255</length>
    <type>Text</type>
</CustomField>