force-app/main/default/objects/Credit_Rating__c/fields/Rating_Agency__c.field-meta.xml
<CustomField>
    <fullName>Rating_Agency__c</fullName>
    <label>Rating Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>