force-app/main/default/objects/Credit_Rating__c/fields/Rating_of_the_instrument_as_assessed_by__c.field-meta.xml
<CustomField>
    <fullName>Rating_of_the_instrument_as_assessed_by__c</fullName>
    <label>Rating of the instrument as assessed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>