force-app/main/default/objects/Credit_Rating__c/fields/Rating_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rating_Rationale__c</fullName>
    <label>Rating Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>