force-app/main/default/objects/Credit_Rating__c/fields/Whether_the_entity_being_rated_is_non_co__c.field-meta.xml
<CustomField>
    <fullName>Whether_the_entity_being_rated_is_non_co__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whether the entity being rated is non-co</label>
    <type>Checkbox</type>
</CustomField>